# CompeticaoPetrobras2020

./: .gitignore  CMakeLists.txt  README.md  coords.txt  package.xml  teste_push.txt
include/: qrcode_reader.h
launch/: mission.launch  simulation_arena.launch
models/Untitled/: model.sdf
models/arena_spawn/: model.sdf
models/equipmentA/: model.sdf
models/equipmentB/: model.sdf
models/equipmentC/: model.sdf
models/equipmentD/: model.sdf
models/equipmentE/: model.sdf
models/land_base/: model.sdf
scripts/: takeoff.py
src/: fase4.cpp  fst_version.cpp  goto.cpp  qrcode_reader.cpp  teste_goto.cpp  visao_wrapper.cpp
start/: .start.sh.swp  spawn.sh  start.sh  uav1_pos.txt  uav1_pos.yaml  uav_backup.yaml
start/ros_uav_waypoints/config/: default_arena.yaml
worlds/: fase1.world  fase4.world  test.world
