<?xml version="1.0"?>
<package format="2">
  <name>petrobras_challenge</name>
  <version>1.0.0</version>
  <description>This package contains scripts for spawning of vehicles at petrobras arena challenge</description>

  <maintainer email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</maintainer>

  <license>free of charge</license>

  <author email="jorge.luiz.henri@hotmail.com">Jorge Luiz Henriques</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros_link_attacher</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>	
  <exec_depend>mrs_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros_link_attacher</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>px4</depend>
  <depend>mavlink_sitl_gazebo</depend>
  <depend>mrs_gazebo_common_resources</depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
